--- a/public/editor.html
+++ b/public/editor.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BIEditor</title>
+  <link type="text/css" rel="stylesheet" href="./editor.css">
 </head>
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="./editor.js"></script>
 </body>
 </html>
